--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: Galileyous OSCP Cheatsheets
+description: "OSCP Cheatsheets"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "Galileyous"
+  email: "galileyous@hotmail.com"
 
 baseurl: /
 
@@ -28,5 +27,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "Galileyous"
+year : "2022"
